# FastMatch

./: .gitignore  CMakeLists.txt  StringMatching  TODO.md
benchmark/: CMakeLists.txt  naive.cpp
src/: CMakeLists.txt  main.cpp  naive.cpp  naive.hpp
